--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
     {
       "matches": ["http://*.bjxueche.net/*"],
 //      "css": ["mystyles.css"],
-      "js": ["lib/jquery-2.2.2.min.js", "content_script.js"]
+      "js": ["lib/jquery-2.2.2.min.js", "yueche.js"]
     }
   ]
 
